# PLwC

./: .gitignore  BETA_TESTING.md  LICENSE  README.md  manifest.json  pyproject.toml  requirements.txt  server.json  server.py
config/: security.yaml.example
docker/document-worker/: Dockerfile  README.md  requirements-doc-worker.txt  wheelhouse-manifest.csv  wheelhouse-manifest.json
docker/node-runner/: Dockerfile  README.md
docs/: AUDIT_LOG.md  BUG_REPORT_TEMPLATE.md  CONFIGURATION.md  EXTERNAL_TESTER_GUIDE.md  EXTERNAL_TEST_PLAN.md  FIRST_RUN.md  GITHUB_BETA_WORKFLOW.md  INSTALLATION.md  LOCAL_CHATGPT_CLIENT_ADAPTER.md  ONBOARDING.md  PROGRAM_AND_SOFTWARE_DESCRIPTION_OPEN_BETA.md  PROJECT_SCOPE.md  QUICKSTART_CLAUDE_DESKTOP.md  SAFE_MODE.md  SECURITY_MODEL.md  TOOLS.md  TROUBLESHOOTING.md
docs/evidence/: CHANGE_HISTORY.md  CHANGE_HISTORY_EN.md  SMOKE_TESTS.md  SMOKE_TESTS_EN.md  TAGEBUCH.md  TAGEBUCH_EN.md
integrations/plwc-chat-bridge/: README.md  UPSTREAM.md  package.json
integrations/plwc-chat-bridge/bridge/: README.md  package-lock.json  package.json  tsconfig.json
integrations/plwc-chat-bridge/config/: plwc.example.json
integrations/plwc-chat-bridge/extension/: README.md  package-lock.json  package.json  tsconfig.json
integrations/plwc-chat-bridge/scripts/: start-windows.ps1
profiles/template/: CONSCIENCE.md  CORE.md  PERSONA.md  TEMPERAMENT.md  journal.md  memory.md  reflection.md
profiles/template/governance/: config.yaml
src/plwc_gateway/: __init__.py
tests/integration/: test_chat_bridge_contract.py  test_mcp_registry_metadata.py
(+82 files in other folders)
